  messages to the server (in the case of FLIP, for example).  When this
  happens, the send was failing, and the disconnection signal was being raised,
  overriding the you-died signal.  Fixed by simply not sending a message
  through the socket if it's already closed.  Thanks Agne for sending a log
  catching the problem.  Fixes #852



Server Fixes

--Whoops, never followed up after d7e614bcf699c27aaf6526e8a360ae95023305d4 back
  in 2020.  That setting that cleared curse counts on server startup was
  supposed to be a temporary thing for one startup only.  Set it to 0 now.
  Part of #857

--Forgiveness now logged in curseLog with F.  Fixes #857

--We now push Donkeytown players out by 200M tiles in X only, instead of 20K
  tiles in both X and Y.  This puts them far enough away that they will never
  be able to travel to interact with other players, nor will they be able to
  screw up the land ahead of other player's westward progress.  Also, by
  pushing them in the X direction only, we allow Y-placement of Donkeytown Eves
  to still land in their home biome bands.  Fixes #856

--New FORGIVE EVERYONE command (which undoes all curses that you've ever
  issued).  CurseLog now includes lines for expiring curses (E) and forgiving
  everyone (A).  CurseDB code no longer worries about old key format (which
  changed more than 90 days ago).  Fixes #858

--Server now rebuilds curse count for each player from curse database on every
  startup (the curse counts were being cleared at every server startup for
  everyone by accident, so these counts are way below the true counts for most
  accounts).  Fixes #861

--There were thousands of old-key-style (from three years ago) entries in the
  curse database.  They were never marked as 0-time for culling.  Server now
  auto-culls these at startup.



Server Fixes  (2023-July-7)

--Respawning Eves (that return to their own camps) on low-pop servers now crave