@@ -98,6 +98,7 @@ CustomRandomSource randSource( 34957197 );
 #include "TwinPage.h"
 #include "PollPage.h"
 #include "GeneticHistoryPage.h"
+#include "ServicesPage.h"
 //#include "TestPage.h"
 
 #include "ServerActionPage.h"
@@ -154,6 +155,7 @@ ReviewPage *reviewPage;
 TwinPage *twinPage;
 PollPage *pollPage;
 GeneticHistoryPage *geneticHistoryPage;
+ServicesPage *servicesPage;
 //TestPage *testPage = NULL;
 
 
@@ -652,6 +654,8 @@ void initFrameDrawer( int inWidth, int inHeight, int inTargetFrameRate,
     
     geneticHistoryPage = new GeneticHistoryPage();
     
+    servicesPage = new ServicesPage();
+    
 
     // 0 music headroom needed, because we fade sounds before playing music
     setVolumeScaling( 10, 0 );
@@ -740,7 +744,8 @@ void freeFrameDrawer() {
     delete twinPage;
     delete pollPage;
     delete geneticHistoryPage;
-    
+    delete servicesPage;
+
     //if( testPage != NULL ) {
     //    delete testPage;
     //    testPage = NULL;
@@ -1739,6 +1744,13 @@ void drawFrame( char inUpdate ) {
                 startConnecting();
                 }
             }
+        else if( currentGamePage == servicesPage ) {
+            if( servicesPage->checkSignal( "back" ) ) {
+                existingAccountPage->setStatus( NULL, false );
+                currentGamePage = existingAccountPage;
+                currentGamePage->base_makeActive( true );
+                }
+            }
         else if( currentGamePage == existingAccountPage ) {    
             if( existingAccountPage->checkSignal( "quit" ) ) {
                 quitGame();
@@ -1761,6 +1773,10 @@ void drawFrame( char inUpdate ) {
                 }
             else if( existingAccountPage->checkSignal( "friends" ) ) {
                 currentGamePage = twinPage;
+                currentGamePage->base_makeActive( true );
+                }
+            else if( existingAccountPage->checkSignal( "services" ) ) {
+                currentGamePage = servicesPage;
                 currentGamePage->base_makeActive( true );
                 }
             else if( existingAccountPage->checkSignal( "done" )
